<resources>
    <string name="app_name">Foodpurby</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook_app_id">393709117691855</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_menu">Close navigation drawer</string>
    <string name="title_activity_menu_products">Close navigation drawer</string>
    <string name="title_activity_my_cart">Close navigation drawer</string>
    <string name="title_activity_restaurant_profile">RestaurantProfile</string>
    <string name="title_activity_singin">Singin</string>
    <string name="title_activity_signup">Signup</string>
    <string name="MenuTitle_restaurants">FOODS</string>
    <string name="MenuTitle_cakes_sweets">"CAKES &amp; SWEETS"</string>
    <string name="MenuTitle_flowers">FLOWERS</string>
    <string name="MenuTitle_groceries">GROCERIES</string>
    <string name="about_powered_by"><a href='%1$s'>Powered by %2$s</a></string>
    <string name="about_copyright">Copyright &#169; %1$s %2$s. All rights reserved.</string>
    <string name="about_powered_by_link">%1$s</string>
    <string name="about_version">Version %1$s</string>
    <string name="rs">&#x20B9;</string>
    <string name="about_page_terms_and_conditions">Terms and Conditions</string>
    <string name="about_page_about">About Us</string>
    <string name="about_page_privacy_policy">Privacy Policy</string>
    <string name="about_page_faq">FAQ</string>
    <string name="about_page_terms_and_conditions_url">%1$s/terms.html</string>
    <string name="about_page_about_url">%1$s/about.html</string>
    <string name="about_page_privacy_policy_url">%1$s/privacy_policy.html</string>
    <string name="about_page_faq_url">%1$s/faq.html</string>
    <string name="title_activity_main_map">MainMap</string>
    <string name="txt_login">Login</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_cerate_account">Create your Account</string>
    <string name="txt_select_all"><u>Select all</u></string>
    <string name="txt_un_select"><u>clear</u></string>
    <string name="txt_cancel">Cancel</string>
    <string name="tct_ok">OK</string>
    <string name="txt_change_language">Change Language</string>
    <string name="txt_guest">Guest</string>
    <string name="txt_english">English</string>
    <string name="txt_arabic">Arabic</string>
    <string name="txt_home">Home</string>
    <string name="txt_orders">My Order</string>
    <string name="txt_myaddress">My AddressList</string>
    <string name="txt_tabaoco_credit">Foodpurby Credit</string>
    <string name="txt_my_fav_rest">My Favourite Restaurants</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_sign_out">Sign out</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_help">Help</string>
    <string name="txt_city">City</string>
    <string name="txt_location">Location</string>
    <string name="txt_show_restaurants">Search</string>
    <string name="current_loc">Use my current location</string>
    <string name="txt_forgot_password">Forgotten your password?</string>
    <string name="txt_email_id">Email</string>
    <string name="txt_email_new_password">E-mail new password</string>
    <string name="txt_popular">Popular</string>
    <string name="txt_category">Category</string>
    <string name="txt_nearby">NearBy</string>
    <string name="txt_sort_by">Sort by:</string>
    <string name="txt_drinks">Drinks</string>
    <string name="txt_mark_my_address">Mark my address</string>
    <string name="txt_address_details">Address details</string>
    <string name="txt_apartment_name">Apartment name</string>
    <string name="txt_landmark">Landmark</string>
    <string name="txt_delivery_instructions">Delivery instructions</string>
    <string name="txt_address_type">Address type</string>
    <string name="txt_friends_home">e.g. Friend\'s home</string>
    <string name="txt_save_my_address">Save my address</string>
    <string name="txt_building_name">Building Name</string>
    <string name="txt_companys_name">Company Name</string>
    <string name="txt_update_my_address">Update my address</string>
    <string name="txt_others">Other</string>
    <string name="txt_work">Work</string>
    <string name="txt_area">Location</string>
    <string name="txt_company_name">Estate Name</string>
    <string name="txt_flat_number">Address2</string>
    <string name="txt_appartment_name">Apartment Name</string>
    <string name="txt_streets">Street</string>
    <string name="txt_street">Address1</string>
    <string name="txt_postal_code">Postal Code</string>
    <string name="txt_show_cart">Show Cart</string>
    <string name="txt_restaurant_name">Restaurant Name</string>
    <string name="txt_address_book">Address book</string>
    <string name="txt_add_new">Add New</string>
    <string name="txt_contact_address">Contact Address</string>
    <string name="txt_contact_no">Contact No</string>
    <string name="txt_pls_signin">Please signin / signup to continue</string>
    <string name="txt_charges">This restaurant charges</string>
    <string name="txt_empty">Empty</string>
    <string name="txt_lets_pay">Proceed</string>
    <string name="txt_collect">Collect</string>
    <string name="txt_deliver">Deliver</string>
    <string name="txt_dinein">Self Pickup</string>
    <string name="txt_date">12/31/2015 – 03:30</string>
    <string name="txt_deliver_to_my_table">Deliver to my table</string>
    <string name="txt_tab_text">TAB 006</string>
    <string name="txt_item_total">Item Total</string>
    <string name="txt_bill_total">Bill Total</string>
    <string name="txt_apply_coupon">+ Apply Coupon</string>
    <string name="txt_coupon_value">Coupon Value</string>
    <string name="txt_package_charges">Package Charges</string>
    <string name="txt_delivery_charges">Delivery Fee</string>
    <string name="txt_extra_delivery_charges">Delivery Charges - Extra -</string>
    <string name="txt_service_tax">Service Tax</string>
    <string name="txt_vat">GST</string>
    <string name="txt_grand_total">Grand Total</string>
    <string name="txt_want_sugar">Want a little sugar?</string>
    <string name="txt_delivery_method">Select Delivery Method</string>
    <string name="txt_modes_of_payment">Modes of payment</string>
    <string name="txt_pay_online">Online Payment(Credit Card / Online Banking)</string>
    <string name="txt_cod">Cash on Delivery (COD)</string>
    <string name="txt_wallet">Foodpurby Wallet</string>
    <string name="txt_go">Go…</string>
    <string name="txt_payment_method">Payment Method</string>
    <string name="txt_send_otp_to">We\'ve sent a verification code to</string>
    <string name="txt_number">+91–9003960003</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_resend_otp_text">In case you do not receive an SMS in 30 seconds click resend to get another code</string>
    <string name="txt_resend">Resend</string>
    <string name="txt_order_placed">Order is successfully placed. Thanks!.</string>
    <string name="txt_find_order_details">Please find your order details</string>
    <string name="txt_order_id">Order Id:</string>
    <string name="txt_total">Total:</string>
    <string name="txt_thanks">Thanks</string>
    <string name="txt_uh_oh">Uh - Oh!</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_or">OR</string>
    <string name="txt_type_your_location">Type your location</string>
    <string name="txt_profile_information">Profile Information</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_email_address">Email Address</string>
    <string name="txt_registered_mobile_number">Registered Mobile Number</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_signout">SignOut</string>
    <string name="txt_registered_email_id">Registered Email Id</string>
    <string name="txt_update_profile_details">Update profile details</string>
    <string name="title_sort_by">Sort By</string>
    <string name="txt_popularity">Popularity</string>
    <string name="txt_rating">Rating</string>
    <string name="txt_minimum_order">Min. Order</string>
    <string name="txt_close">Close</string>
    <string name="txt_favourite_restaurants">Favourite Restaurants</string>
    <string name="txt_pure_vegeterian">Pure Vegetarian</string>
    <string name="txt_cusines">Cuisines</string>
    <string name="txt_apply_filters">Apply Filters</string>
    <string name="txt_min">min</string>
    <string name="txt_restaurant_open_later">Restaurant open later</string>
    <string name="txt_opening_hours">Opening days</string>
    <string name="txt_open">Opening hours</string>
    <string name="txt_payment_methods">Payment Methods</string>
    <string name="txt_cusine">Cuisine</string>
    <string name="txt_addresses">Address</string>
    <string name="txt_add_your_rating">Add your rating</string>
    <string name="txt_no_reviews_found">No reviews found.</string>
    <string name="txt_more_reviews">More reviews…</string>
    <string name="txt_vibration">Vibrate while adding to cart</string>
    <string name="txt_items">Items</string>
    <string name="txt_delivery_charges_extra">Delivery Charges - Extra -</string>
    <string name="txt_order_total">Order Total</string>
    <string name="text_date">Date</string>
    <string name="txt_status">Status</string>
    <string name="txt_payment_status">Payment Status</string>
    <string name="txt_update_password">Update Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="txt_login_your_account">Login your account</string>
    <string name="hint_email_id">Email Id</string>
    <string name="txt_password">Password</string>
    <string name="txt_create_new_account">Create new Account</string>
    <string name="txt_sign_up">Signup</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="txt_pls_wait">Please wait…</string>
    <string name="hint_search">Search…</string>
    <string name="txt_enter_coupon_code">Enter Coupon Code</string>
    <string name="hint_coupon_code">Coupon Code</string>
    <string name="txt_no_coupon_code">No Coupon Code</string>
    <string name="txt_list_by_favourite">List by Favourite</string>
    <string name="txt_list_by_frequent_visit">List by Frequent Visit</string>
    <string name="txt_want_to_clear_cart">Do you really want to clear your cart?</string>
    <string name="txt_deliver_to_table">Deliver to table</string>
    <string name="txt_table_number">Table number</string>
    <string name="txt_delivery_fee">Delivery Fee</string>
    <string name="txt_online_payment">Online Payment</string>
    <string name="txt_open_reataurant">Open Restaurant</string>
    <string name="txt_new_reataurant">New Restaurant</string>
    <string name="txt_voucher_accept">Voucher Accept</string>
    <string name="txt_preorder">Pre order</string>
    <string name="txt_filters">Filters</string>
    <string name="txt_fastest_delivery">Fastest Delivery</string>
    <string name="pure_vegetarian">Pure vegetarian</string>
    <string name="non_vegetarian">Non vegetarian</string>
    <string name="halal">Halal</string>
    <string name="non_halal">Non halal</string>
    <string name="park_free">Pork free</string>
    <string name="restaurent_filter">Filter Restaurant</string>
</resources>