<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    >

    <TextView
        android:id="@+id/tvFavourite"
        android:text="@string/txt_list_by_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tvFrequent"
        android:text="@string/txt_list_by_frequent_visit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAddTable"
        android:text="@string/txt_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>