<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/txt_uh_oh"
        android:textSize="18sp" />

    <Button
        android:id="@+id/AOS_BT_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/toolbar_color"
        android:text="@string/txt_retry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/txt_or"
        android:textSize="18sp" />

    <Button
        android:id="@+id/AOS_BT_type_your_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:background="@color/toolbar_color"
        android:text="@string/txt_type_your_location" />

</LinearLayout>